# xa11y

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Containerfile.base  Containerfile.wayland  Containerfile.wayland-libei  Containerfile.wayland-uinput  FEEDBACK.md  LICENSE  README.md  REVIEW.md  context7.json  coverage.sh  deny.toml  external-issues.md  release.toml  run_fuzz_macos.sh  run_integ_container.sh  run_integ_tests.sh  run_integ_tests_macos.sh  run_integ_tests_windows.ps1  run_python_integ_tests.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/actions/setup-a11y/: action.yml  apt-packages.txt
.github/actions/setup-rust/: action.yml
.github/scripts/: generate-release-notes.mjs  generate_release_notes.py
.github/workflows/: ci.yml  docs.yml  publish-python.yml  publish.yml  update-release-notes.yml
bindings/: parity_allowlist.toml
design/: README.md  events.md
docs/: DESIGN.md  check_links.py  check_tables.py  generate_js_api.py  generate_python_api.py  generate_sitemap.py
docs/python/: conf.py  index.rst
docs/site/: astro.config.mjs  package-lock.json  package.json
examples/: README.md
examples/cli/: end_to_end.sh
examples/js/: end_to_end.mjs
examples/python/: end_to_end.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/xa11y/: __init__.py  _native.pyi
scripts/: bootstrap_npm_placeholders.sh  gen_hero_svg.py  grant_macos_tcc.sh  run_app_suite.sh  run_cocoa_tests.sh  run_egui_tests.sh  run_electron_tests.sh  run_gtk_tests.sh  run_input_smoke.sh  run_integ_container.sh  run_integ_tests.sh  run_integ_tests_macos.sh  run_js_tests.sh  run_provider_fuzz.sh  run_qt_tests.sh  run_tauri_tests.sh  run_wayland_libei.sh  run_wayland_portal.sh  run_wayland_smoke.sh  run_wayland_uinput.sh  setup_linux_a11y.sh  setup_python_integ_env.sh
test-apps/accesskit/: Cargo.toml
test-apps/accesskit/src/: main.rs
test-apps/cocoa/: Makefile  main.swift
test-apps/egui/: Cargo.toml
test-apps/egui/src/: main.rs
test-apps/electron/: index.html  main.js  package.json
test-apps/gtk/: app.py  requirements.txt
test-apps/qt/: app.py
test-apps/tauri/: Cargo.toml  tauri.conf.json
test-apps/tauri/frontend/: index.html  input-events.html
test-apps/tauri/src/: main.rs
test-apps/winforms/: Program.cs  xa11y-winforms-test-app.csproj
tests/: README.md  helpers.py  matrix.yaml  matrix_check.py  requirements.txt
tests/cocoa/: conftest.py  test_events.py  test_widgets.py  test_widgets_extra.py
tests/electron/: conftest.py  test_accessibility_enabled.py
tests/gtk/: conftest.py  test_events.py  test_widgets.py  test_widgets_extra.py
tests/harness/: launch.py
tests/qt/: conftest.py  test_01_widgets.py  test_02_events.py  test_03_a11y_tree.py  test_04_widgets_extra.py
tests/tauri/: conftest.py  test_02_events.py  test_03_widgets_extra.py  test_events.py  test_input_sim.py  test_screenshot.py  test_widgets.py
xa11y/: Cargo.toml  README.md
xa11y-core/: Cargo.toml
xa11y-core/src/: action.rs  app.rs  config.rs  element.rs  error.rs  event.rs  event_provider.rs  input.rs  lib.rs  locator.rs  mock.rs  node.rs  provider.rs  role.rs  screenshot.rs  selector.rs  text.rs  tree.rs
xa11y-core/tests/: test_types.rs
xa11y-fuzz/: Cargo.toml
xa11y-fuzz/fuzz/: Cargo.toml
xa11y-fuzz/fuzz/fuzz_targets/: query.rs  selector.rs  serde.rs  tree_ops.rs
xa11y-fuzz/src/: lib.rs
xa11y-js/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
xa11y-js/__test__/integ/: 01_tree.test.js  02_actions.test.js  03_input_sim.test.js  04_screenshot.test.js  helpers.js
xa11y-js/__test__/integ-electron/: electron_a11y.test.js  helpers.js
xa11y-js/__test__/types/: consumers.test-d.ts
xa11y-js/__test__/unit/: actions.test.js  app-factories.test.js  app-lookup-options.test.js  default-timeout.test.js  element-actions.test.js  element.test.js  errors.test.js  locator.test.js  module.test.js  subscription.test.js  tree.test.js
xa11y-js/scripts/: patch-native-dts.mjs
xa11y-js/src/: app.rs  element.rs  errors.rs  input.rs  lib.rs  locator.rs  mock.rs  screenshot.rs  subscription.rs  types.rs
xa11y-linux/: Cargo.toml
xa11y-linux/src/: atspi.rs  events.rs  input.rs  lib.rs  mapping.rs  platform.rs  scale.rs  screenshot.rs  stub.rs  wayland_input.rs
xa11y-linux/tests/: input_smoke.rs  wayland_input_e2e.rs  wayland_smoke.rs
xa11y-macos/: Cargo.toml  build.rs
xa11y-macos/src/: ax.rs  ax_ffi.rs  exception_safe.m  input.rs  lib.rs  mapping.rs  platform.rs  screenshot.rs
xa11y-macros/: Cargo.toml
xa11y-macros/src/: lib.rs
xa11y-macros/tests/: derive_tests.rs
xa11y-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
xa11y-python/python/xa11y/: __init__.py  _cli.py  _native.pyi
xa11y-python/src/: lib.rs
xa11y-python/tests/: conftest.py  test_actions.py  test_app_lookup.py  test_cli.py  test_default_timeout.py  test_element.py  test_element_actions.py  test_events.py  test_exceptions.py  test_gil_release.py  test_integ.py  test_locator.py  test_module.py  test_node.py  test_provider.py  test_subscription.py  test_tree.py  test_typing.py
xa11y-qt-test-app/: app.py  requirements.txt
xa11y-qt-test-app/tests/: conftest.py  test_01_widgets.py  test_events.py  test_widgets.py
xa11y-test-app/: Cargo.toml
xa11y-test-app/src/: main.rs
xa11y-test-webview/: Cargo.toml
xa11y-test-webview/src/: main.rs
xa11y-windows/: Cargo.toml
xa11y-windows/examples/: uia_debug.rs
xa11y-windows/src/: dpi.rs  input.rs  lib.rs  mapping.rs  platform.rs  screenshot.rs  splice.rs  stub.rs  uia.rs
xa11y/fuzz/: Cargo.toml
xa11y/fuzz/fuzz_targets/: mock.rs  selector.rs  tree_ops.rs
xa11y/src/: cli.rs  lib.rs
xa11y/tests/: INTEG_COVERAGE.md  integ_test.rs  integration_test.rs  test_integration.rs  unit_test.rs
xa11y/tests/integ/: actions.rs  errors.rs  events_linux.rs  events_macos.rs  events_windows.rs  mod.rs  multi_window.rs  screenshot.rs  tree.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+46 files in other folders)
