[workspace]
members = [
    "xa11y-core",
    "xa11y-macos",
    "xa11y-windows",
    "xa11y-linux",
    "xa11y",
    "test-apps/accesskit",
    "xa11y-fuzz",
    "xtask",
]
exclude = [
    "xa11y-python",
    "xa11y-js",
    "test-apps/tauri",  # Tauri requires platform-specific system deps (WebKit2GTK etc.)
]
resolver = "2"

[workspace.package]
version = "0.7.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/xa11y/xa11y"

[workspace.dependencies]
xa11y-core = { path = "xa11y-core", version = "0.7.1", default-features = false }
xa11y-macos = { path = "xa11y-macos", version = "0.7.1" }
xa11y-windows = { path = "xa11y-windows", version = "0.7.1" }
xa11y-linux = { path = "xa11y-linux", version = "0.7.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
