[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "xa11y"
version = "0.0.1"
description = "Cross-platform accessibility automation library"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "xa11y contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
keywords = ["accessibility", "a11y", "automation", "testing"]

[project.urls]
Homepage = "https://github.com/xa11y/xa11y"
Repository = "https://github.com/xa11y/xa11y"
Issues = "https://github.com/xa11y/xa11y/issues"

[tool.maturin]
python-source = "."
module-name = "xa11y._native"
features = ["pyo3/extension-module"]
