[package]
name = "xa11y-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
xa11y-core = { path = "../xa11y-core" }

[target.'cfg(target_os = "macos")'.dependencies]
xa11y = { path = "../xa11y" }
rand = "0.8"

[[bin]]
name = "macos-provider-fuzz"
path = "src/bin/macos_provider_fuzz.rs"
required-features = []
