# Declared as its own workspace so `cargo`/`napi build` can build this crate
# from anywhere (including nested checkouts like git worktrees), without
# being captured by the parent workspace's relative-path `exclude` list.
[workspace]

[package]
name = "xa11y-js"
version = "0.9.1"
edition = "2021"
license = "MIT"
publish = false # Published to npm, not crates.io

[lib]
crate-type = ["cdylib"]

[dependencies]
# `test-support` exposes the shared mock provider used by JS unit tests.
# Always enabled here because the .node bundle already exports
# `_makeTestLocator()` for the `__test__/unit` suite to consume.
xa11y = { path = "../xa11y", features = ["test-support"] }
napi = { version = "3", default-features = false, features = ["napi4", "async", "error_anyhow", "serde-json"] }
serde_json = "1"
napi-derive = "3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
