[package]
name = "xa11y-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux accessibility backend for xa11y: AT-SPI2 introspection, X11/Wayland input simulation, and screen capture"

[dependencies]
xa11y-core = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
png = "0.17"
rayon = "1"
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
# X11 + XTest for the X11 input-simulation backend.
x11rb = { version = "0.13", default-features = false, features = ["xtest"] }
# Wayland input-simulation backend: libei (via reis, pure Rust) over the
# socket fd handed to us by org.freedesktop.portal.RemoteDesktop.ConnectToEIS;
# xkbcommon for keymap composition + keysym→keycode lookup.
reis = "0.4"
xkbcommon = "0.8"

[target.'cfg(target_os = "linux")'.dev-dependencies]
x11rb = { version = "0.13", default-features = false }
