[package]
name = "xa11y-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux accessibility backend for xa11y: AT-SPI2 introspection, X11/Wayland input simulation, and screen capture"

[dependencies]
xa11y-core = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
png = "0.18"
rayon = "1"
zbus = { version = "5", default-features = false, features = ["async-io", "blocking-api"] }
# X11 + XTest for the X11 input-simulation backend.
x11rb = { version = "0.13", default-features = false, features = ["xtest"] }
# Wayland input-simulation backend: drive a /dev/uinput virtual evdev
# device. Compositor-agnostic — works on every Wayland session (GNOME,
# KDE, sway, Hyprland, Cosmic, weston) because the kernel exposes the
# device just like a real keyboard/mouse. Requires the user to be in
# the `input` group; this is the same gate xdotool, ydotool, Steam,
# Wine, et al. use.
evdev = "0.13"
# xkbcommon for keysym → evdev-keycode lookup. The X11 backend's
# `keysym_for(Key)` mapping is reused; we then translate that keysym to
# an evdev keycode through the system's default xkb keymap.
xkbcommon = "0.8"

[target.'cfg(target_os = "linux")'.dev-dependencies]
x11rb = { version = "0.13", default-features = false }
