[package]
name = "xa11y-macos"
description = "macOS backend for xa11y (AXUIElement via ApplicationServices)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xa11y-core.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.24"
serde_json.workspace = true
