# Declared as its own workspace so `cargo`/`maturin` can build this crate
# from anywhere (including nested checkouts like git worktrees), without
# being captured by the parent workspace's relative-path `exclude` list.
[workspace]

[package]
name = "xa11y-python"
version = "0.8.1"
edition = "2021"
license = "MIT"
publish = false # Published to PyPI, not crates.io

[lib]
name = "xa11y_python"
crate-type = ["cdylib"]

[dependencies]
# `test-support` exposes the shared mock provider used by Python unit tests.
# The feature is gated behind a cargo feature so it doesn't ship with
# production-only builds; we always enable it here because the Python wheel
# already carries the `_make_test_locator()` helper for `tests/` to import.
xa11y = { path = "../xa11y", features = ["test-support"] }
pyo3 = { version = "0.23", features = ["abi3-py39"] }
serde_json = "1"
