[package]
name = "xa11y-windows"
description = "Windows backend for xa11y (UI Automation)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xa11y-core.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
] }
