[package]
name = "xa11y-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows accessibility backend for xa11y (UI Automation)"

[dependencies]
xa11y-core = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
