[package]
name = "xa11y"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform accessibility client library — unified API for reading and interacting with accessibility trees"
readme = "README.md"

[features]
testing = []
strict-roles = ["xa11y-core/strict-roles"]
# Re-exports the shared mock Provider from xa11y-core. Used by language
# bindings' test builds; not needed in production.
test-support = ["xa11y-core/test-support"]

[dependencies]
xa11y-core = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
xa11y-macos = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
xa11y-windows = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
xa11y-linux = { workspace = true }

[[bin]]
name = "xa11y"
path = "src/bin/xa11y.rs"

[dependencies.serde_json]
workspace = true

[dev-dependencies]
xa11y = { path = ".", features = ["testing"] }
serde_json = { workspace = true }
