[package]
name = "xa11y-example-end-to-end"
version = "0.11.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# The binary is what runs in CI / from the docs walkthrough. We use src/main.rs
# rather than the `[[example]]` target so the file is the obvious entry point
# when someone clicks through from the docs.
[[bin]]
name = "xa11y-example-end-to-end"
path = "src/main.rs"

[dependencies]
xa11y = { path = "../../xa11y" }
