[package]
name = "xa11y-test-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform accessibility test application for xa11y integration tests"
publish = false

[[bin]]
name = "xa11y-test-app"
path = "src/main.rs"

[dependencies]
accesskit = "0.24"
accesskit_winit = "0.32"
winit = "0.30"
