[package]
name = "xa11y-tauri-test-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tauri test application for xa11y integration tests"
publish = false

[[bin]]
name = "xa11y-tauri-test-app"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
